# plato-rag

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_corpus_entry_id.py
data/: README.md  corpus_manifest.yaml  corpus_seed.json
data/evaluation/: malformed_output.yaml  public_seed.yaml  query_intent_routing.yaml
data/prepared/primary/: apology.txt  descartes_meditations.txt  hume_enquiry.txt  meno.txt  phaedo.txt  republic_book_7.txt  symposium.txt
local_only/sep/: README.local-only.md  corpus_seed.local.json
scripts/: ingest_corpus.py  ingest_primary.py  run_evaluation.py
src/plato_rag/: __init__.py  config.py  dependencies.py  main.py  resilience.py
src/plato_rag/api/contracts/: __init__.py  chunks.py  citations.py  common.py  grounding.py  query.py
src/plato_rag/api/v1/: health.py  query.py  router.py  sources.py
src/plato_rag/db/: engine.py  models.py
src/plato_rag/db/repositories/: chunk.py  document.py
src/plato_rag/domain/: __init__.py  chunk.py  document.py  location.py  philosophy_profile.py  source.py
src/plato_rag/evaluation/: __init__.py  dataset.py  runner.py
src/plato_rag/generation/: bracket_fallback.py  citation_extractor.py  service.py  structured_output.py
src/plato_rag/generation/llm/: anthropic.py
src/plato_rag/generation/prompts/: philosophy.py
src/plato_rag/guardrails/: __init__.py  source_access.py
src/plato_rag/ingestion/: corpus.py  service.py
src/plato_rag/ingestion/chunkers/: section.py
src/plato_rag/ingestion/embedders/: openai.py
src/plato_rag/ingestion/parsers/: __init__.py  iep_html.py  perseus_tei.py  plaintext.py  sep_html.py
src/plato_rag/local_only/: __init__.py  sep_html.py
src/plato_rag/protocols/: __init__.py  embedding.py  generation.py  ingestion.py  retrieval.py
src/plato_rag/retrieval/: __init__.py  policy.py  service.py
src/plato_rag/retrieval/reranker/: source_priority.py
tests/: conftest.py  test_resilience.py
tests/api/: test_contracts.py  test_query_failures.py
tests/domain/: test_location.py  test_source_model.py
tests/evaluation/: test_dataset.py  test_runner.py
tests/generation/: __init__.py  test_bracket_fallback.py  test_citation_extractor.py  test_service.py
tests/guardrails/: test_source_access.py
tests/ingestion/: test_corpus_bootstrap.py  test_iep_html_parser.py  test_perseus_tei_parser.py  test_seed_manifest.py  test_sep_html_parser.py  test_service.py
tests/retrieval/: test_policy.py  test_service.py
(+1 files in other folders)
