[project]
name = "plato-rag"
version = "0.1.0"
description = "Philosophy RAG service with source-priority retrieval and SEP/IEP-first grounding"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "openai>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plato_rag"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/plato_rag/api/v1/*.py" = ["B008"]  # Depends() in FastAPI endpoint signatures
"src/plato_rag/dependencies.py" = ["B008"]
"src/plato_rag/generation/prompts/*.py" = ["E501"]  # Prompt text is prose, not code
"src/plato_rag/ingestion/parsers/*.py" = ["E501"]  # Docstring examples

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
